DAS-2397: Settled UAT Tests

--- a/test/nsidc-smap/nsidc-smap_Regression.ipynb
+++ b/test/nsidc-smap/nsidc-smap_Regression.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "f08acc3f-6bc7-4a2e-a602-cc10ecb27677",
    "metadata": {
     "editable": true,
@@ -78,7 +78,7 @@
    },
    "outputs": [],
    "source": [
-    "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'"
+    "harmony_host_url = \"https://harmony.uat.earthdata.nasa.gov\""
    ]
   },
   {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "c6c54643-4653-4368-9158-1deb8197f9c9",
    "metadata": {},
    "outputs": [],
@@ -99,6 +99,7 @@
     "from os.path import exists\n",
     "from pathlib import Path\n",
     "from tempfile import TemporaryDirectory\n",
+    "import json\n",
     "\n",
     "from harmony import Client, Environment, Request"
    ]
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "4919504b-1f79-4073-ae79-9a23fb1f906f",
    "metadata": {},
    "outputs": [],
@@ -122,6 +123,19 @@
     "\n",
     "sys.path.append(\"../shared_utils\")\n",
     "from utilities import print_success, submit_and_download"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e06f918a-5e2d-4815-8d15-3dd9a9d6dc65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from smap_utils import (\n",
+    "    file_for_variable,\n",
+    ")\n",
+    "from earthdata_hashdiff import geotiff_matches_reference_hash_file"
    ]
   },
   {
@@ -134,27 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "dbc2aaa7-3279-4b1f-beb3-a638e7e656bd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "d056598e-5058-470c-83f9-f8dca360308a",
    "metadata": {},
    "outputs": [],
@@ -165,79 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "d38dd6df-8c74-408e-8138-18e2c94a8258",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'GeoTIFF_reformat': {},\n",
-      " 'reprojection_to_geographic': {'SPL4CMDL': {'request_params': {'collection': <harmony.request.Collection object at 0x11a29b9b0>,\n",
-      "                                                                'crs': 'EPSG:4326',\n",
-      "                                                                'granule_id': 'G1273435798-NSIDC_CUAT',\n",
-      "                                                                'labels': ['smap-test-21',\n",
-      "                                                                           'harmony-py']},\n",
-      "                                             'test_params': {'ext': 'nc4'}}},\n",
-      " 'subset_bounding_box': {'SPL2SMA': {'request_params': {'collection': <harmony.request.Collection object at 0x11ba53a40>,\n",
-      "                                                        'format': 'image/tiff',\n",
-      "                                                        'granule_id': 'G1260377350-NSIDC_CUAT',\n",
-      "                                                        'labels': ['smap-test-1',\n",
-      "                                                                   'harmony-py'],\n",
-      "                                                        'spatial': BBox: West:-8.2, South:42.0, East:12.7, North:52.8,\n",
-      "                                                        'variables': ['Radar_Data/sigma0_hh_mean']},\n",
-      "                                     'test_params': {'ext': 'tif'}},\n",
-      "                         'SPL3FTP_E': {'request_params': {'collection': <harmony.request.Collection object at 0x109f819d0>,\n",
-      "                                                          'granule_id': 'G1263078049-NSIDC_CUAT',\n",
-      "                                                          'labels': ['smap-test-15',\n",
-      "                                                                     'harmony-py'],\n",
-      "                                                          'spatial': BBox: West:-26, South:63, East:-12, North:67,\n",
-      "                                                          'variables': ['Freeze_Thaw_Retrieval_Data_Polar/freeze_thaw',\n",
-      "                                                                        'Freeze_Thaw_Retrieval_Data_Polar/latitude',\n",
-      "                                                                        'Freeze_Thaw_Retrieval_Data_Polar/longitude']},\n",
-      "                                       'test_params': {'ext': 'nc4'}}},\n",
-      " 'subset_by_geojson': {},\n",
-      " 'subset_by_kml': {'SPL3SMP': {'request_params': {'collection': <harmony.request.Collection object at 0x11a29b6b0>,\n",
-      "                                                  'crs': 'EPSG:4326',\n",
-      "                                                  'granule_id': 'G1263078590-NSIDC_CUAT',\n",
-      "                                                  'labels': ['smap-test-18',\n",
-      "                                                             'harmony-py'],\n",
-      "                                                  'shape': 'ancillary/EasternUS.kml'},\n",
-      "                               'test_params': {'ext': 'nc4'}}},\n",
-      " 'subset_by_shapefile': {},\n",
-      " 'subset_by_variable': {'SPL2SMP_E': {'request_params': {'collection': <harmony.request.Collection object at 0x11b080200>,\n",
-      "                                                         'granule_id': 'G1273163898-NSIDC_CUAT',\n",
-      "                                                         'labels': ['smap-test-10',\n",
-      "                                                                    'harmony-py'],\n",
-      "                                                         'variables': ['Soil_Moisture_Retrieval_Data/latitude',\n",
-      "                                                                       'Soil_Moisture_Retrieval_Data/longitude',\n",
-      "                                                                       'Soil_Moisture_Retrieval_Data/soil_moisture',\n",
-      "                                                                       'Soil_Moisture_Retrieval_Data/soil_moisture_error',\n",
-      "                                                                       'Soil_Moisture_Retrieval_Data_Polar/latitude',\n",
-      "                                                                       'Soil_Moisture_Retrieval_Data_Polar/longitude',\n",
-      "                                                                       'Soil_Moisture_Retrieval_Data_Polar/tb_h_corrected',\n",
-      "                                                                       'Soil_Moisture_Retrieval_Data_Polar/tb_h_uncorrected']},\n",
-      "                                      'test_params': {'ext': 'h5'}},\n",
-      "                        'SPL2SMP_E_2': {'request_params': {'collection': <harmony.request.Collection object at 0x11b0802c0>,\n",
-      "                                                           'format': 'image/tiff',\n",
-      "                                                           'granule_id': 'G1260703508-NSIDC_CUAT',\n",
-      "                                                           'labels': ['smap-test-16',\n",
-      "                                                                      'harmony-py'],\n",
-      "                                                           'variables': ['Soil_Moisture_Retrieval_Data/soil_moisture']},\n",
-      "                                        'test_params': {'ext': 'tif'}}}}\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pprint\n",
-    "\n",
-    "pprint.pprint(non_production_configuration)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "1bcb56c0-f6f6-411a-9bfd-3f867bfe235a",
    "metadata": {},
    "outputs": [],
@@ -269,6 +191,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5b98f526-5403-45b3-a66f-293fff934613",
+   "metadata": {},
+   "source": [
+    "## Configuration for tests:\n",
+    "\n",
+    "Print the current configuration that will be used in the tests."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d38dd6df-8c74-408e-8138-18e2c94a8258",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(json.dumps(configuration, default=str, indent=2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b115ba16-0d31-43b0-9f57-6a7061b7eeda",
    "metadata": {},
    "source": [
@@ -290,9 +232,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with TemporaryDirectory() as tmp_dir:\n",
-    "    if configuration is not None:\n",
-    "        for test_name, test_configs in configuration.items():\n",
+    "if configuration is not None:\n",
+    "    with TemporaryDirectory() as tmp_dir:\n",
+    "        for test_name, test_configs in configuration['single_output_tests'].items():\n",
     "            for shortname, test_config in test_configs.items():\n",
     "\n",
     "                test_request = Request(**test_config[\"request_params\"])\n",
@@ -313,20 +255,105 @@
     "\n",
     "                print_success(f\"{shortname} {test_name} test request complete.\")\n",
     "            print_success(f\"{test_name} test suite complete.\")\n",
-    "        print_success(\"Entire SMAP Regression Test suite complete.\")\n",
-    "    else:\n",
-    "        print(\n",
-    "            f'Bounding box tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
-    "        )"
+    "        print_success(\"Entire SMAP Single Output Regression Test suite complete.\")\n",
+    "else:\n",
+    "    print(\n",
+    "        f'Bounding box tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
+    "    )"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6dd099bb-e958-4c57-a45e-48f64465c7e9",
+   "id": "80ba1a0f-6928-4906-9002-f0a15c75f381",
    "metadata": {},
    "source": [
-    "### Scratchy "
+    "## Multiple output file tests\n",
+    "\n",
+    "The following cell runs through any request that generates multiple output files. These are GeoTIFF Reformatting requests. These are generally requests for multiple variables and generate a single GeoTIFF for each variable on the output. The tests make a request and then download all of the resulting files and then compare those to the reference hash values to verify no changes in the output.\n",
+    "\n",
+    "The tests include:\n",
+    "\n",
+    "- SPL2SMP with multiple variable subsetting.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e5e2c1c-4ad6-4761-b001-1a90af7c1bf7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if configuration is not None:\n",
+    "    with TemporaryDirectory() as tmp_dir:\n",
+    "        for test_name, test_configs in configuration[\"multiple_output_tests\"].items():\n",
+    "\n",
+    "            for shortname, test_config in test_configs.items():\n",
+    "                print(\n",
+    "                    f\"testing {shortname} with {json.dumps(test_config, indent=2, default=str)}\"\n",
+    "                )\n",
+    "                test_request = Request(**test_config[\"request_params\"])\n",
+    "                ext = test_config[\"test_params\"][\"ext\"]\n",
+    "\n",
+    "                ## Generate and download all of the output files\n",
+    "                job_id = harmony_client.submit(test_request)\n",
+    "\n",
+    "                for filename in [\n",
+    "                    file_future.result()\n",
+    "                    for file_future in harmony_client.download_all(\n",
+    "                        job_id, overwrite=True, directory=tmp_dir\n",
+    "                    )\n",
+    "                ]:\n",
+    "                    prefix = Path(filename).name.split('_')[0]\n",
+    "                    print(f'Downloaded: {Path(filename).name}')\n",
+    "\n",
+    "                # ## Check each of the expected output files against its reference file.\n",
+    "                for test_var in test_config[\"request_params\"][\"variables\"]:\n",
+    "                    var_base = test_var.split(\"/\")[-1]\n",
+    "                    output_file = file_for_variable(\n",
+    "                        Path(tmp_dir), f\"{prefix}*Data_{var_base}_reformatted*\"\n",
+    "                    )\n",
+    "                    reference_file = file_for_variable(\n",
+    "                        Path(\"reference_files\"), f\"{var_base}_reference*\"\n",
+    "                    )\n",
+    "                    print(f'validating {output_file}')\n",
+    "                    geotiff_matches_reference_hash_file(output_file, reference_file)\n",
+    "\n",
+    "                print_success(f\"{shortname} {test_name} test request complete.\")\n",
+    "            print_success(f\"{test_name} test suite complete.\")\n",
+    "        print_success(\"muliple_output_test: SMAP Regression Test suite complete.\")\n",
+    "else:\n",
+    "    print(\n",
+    "        f'Bounding box tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b48deed-5907-4c77-80bb-79c5fc75b25f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import jupyter_black\n",
+    "\n",
+    "jupyter_black.load()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e146fc1b-2e11-4a6c-9fd0-82419988f5bc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afa3e138-553c-4fb1-bed9-4b8576aebdc4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
