DAS-2397: Implement all tests with UAT

--- a/test/nsidc-smap/nsidc-smap_Regression.ipynb
+++ b/test/nsidc-smap/nsidc-smap_Regression.ipynb
@@ -19,9 +19,13 @@
     "\n",
     "Sample requests include:\n",
     "\n",
-    "- Subset by bounding box\n",
-    "- Subset by temporal range\n",
-    "- Subset by shapefile \n",
+    "- Subset by Bounding Box\n",
+    "- Subset by Geojson\n",
+    "- Subset by Shapefile \n",
+    "- Subset by Variable\n",
+    "- Subset by KML\n",
+    "- Reprojection to Geographic\n",
+    "- GeoTIFF Reformating\n",
     "\n",
     "\n",
     "## Prerequisites\n",
@@ -60,7 +64,7 @@
     "\n",
     "## Test reference files:\n",
     "\n",
-    "The reference files stored in the harmony-regression-test repository are JSON files containing hashed values derived from all groups and variables in each file. The raw netCDF4 or HDF-5 files are hosted in the Harmony UAT AWS account in the `harmony-uat-regression-tests` S3 bucket in the `nsidc-smap` folder."
+    "The reference files stored in the harmony-regression-test repository are JSON files containing hashed values derived from the groups, variables and metadata in each file. The raw netCDF4, HDF-5 or GeoTIFF files are hosted in the Harmony UAT AWS account in the `harmony-uat-regression-tests` S3 bucket in the `nsidc-smap/reference_files/X.Y.Z` folder."
    ]
   },
   {
@@ -101,7 +105,10 @@
     "from tempfile import TemporaryDirectory\n",
     "import json\n",
     "\n",
-    "from harmony import Client, Environment, Request"
+    "from harmony import Client, Environment, Request\n",
+    "from earthdata_hashdiff import (\n",
+    "    geotiff_matches_reference_hash_file,\n",
+    ")"
    ]
   },
   {
@@ -122,20 +129,8 @@
     "import sys\n",
     "\n",
     "sys.path.append(\"../shared_utils\")\n",
-    "from utilities import print_success, submit_and_download"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e06f918a-5e2d-4815-8d15-3dd9a9d6dc65",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from smap_utils import (\n",
-    "    file_for_variable,\n",
-    ")\n",
-    "from earthdata_hashdiff import geotiff_matches_reference_hash_file"
+    "from utilities import print_success, submit_and_download\n",
+    "from smap_utils import file_for_variable, comparison_function_by_extension"
    ]
   },
   {
@@ -191,26 +186,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b98f526-5403-45b3-a66f-293fff934613",
-   "metadata": {},
-   "source": [
-    "## Configuration for tests:\n",
-    "\n",
-    "Print the current configuration that will be used in the tests."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d38dd6df-8c74-408e-8138-18e2c94a8258",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(json.dumps(configuration, default=str, indent=2))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "b115ba16-0d31-43b0-9f57-6a7061b7eeda",
    "metadata": {},
    "source": [
@@ -234,12 +209,16 @@
    "source": [
     "if configuration is not None:\n",
     "    with TemporaryDirectory() as tmp_dir:\n",
-    "        for test_name, test_configs in configuration['single_output_tests'].items():\n",
+    "\n",
+    "        for test_name, test_configs in configuration[\"single_output_tests\"].items():\n",
+    "            print(f\"Running Tests: {test_name}\")\n",
+    "\n",
     "            for shortname, test_config in test_configs.items():\n",
+    "                print(f\"running request: {shortname}\")\n",
     "\n",
     "                test_request = Request(**test_config[\"request_params\"])\n",
     "                ext = test_config[\"test_params\"][\"ext\"]\n",
-    "                test_output = tmp_dir / Path(f\"{shortname}_{test_name}.{ext}\")\n",
+    "                test_output = tmp_dir / Path(f\"{shortname}_{test_name}{ext}\")\n",
     "                test_reference = Path(\n",
     "                    f\"reference_files/{test_output.stem}_reference.json\"\n",
     "                )\n",
@@ -250,8 +229,15 @@
     "                    test_output\n",
     "                ), f\"Unsuccessful Harmony Request: {shortname}: {test_name}\"\n",
     "\n",
-    "                # I think you could put the test name in the config and call it?\n",
-    "                # assert h5_matches_reference_hash_file(...\n",
+    "                # Grab correct comparison function and call it.\n",
+    "                compare_fxn = comparison_function_by_extension(ext)\n",
+    "                reference_file = (\n",
+    "                    Path(\"reference_files\") / f\"{test_output.stem}_reference.json\"\n",
+    "                )\n",
+    "                print(\n",
+    "                    f\"assert: {compare_fxn.__name__}({test_output.name}, {reference_file}) \"\n",
+    "                )\n",
+    "                assert compare_fxn(test_output, reference_file)\n",
     "\n",
     "                print_success(f\"{shortname} {test_name} test request complete.\")\n",
     "            print_success(f\"{test_name} test suite complete.\")\n",
@@ -303,8 +289,8 @@
     "                        job_id, overwrite=True, directory=tmp_dir\n",
     "                    )\n",
     "                ]:\n",
-    "                    prefix = Path(filename).name.split('_')[0]\n",
-    "                    print(f'Downloaded: {Path(filename).name}')\n",
+    "                    prefix = Path(filename).name.split(\"_\")[0]\n",
+    "                    print(f\"Downloaded: {Path(filename).name}\")\n",
     "\n",
     "                # ## Check each of the expected output files against its reference file.\n",
     "                for test_var in test_config[\"request_params\"][\"variables\"]:\n",
@@ -315,7 +301,7 @@
     "                    reference_file = file_for_variable(\n",
     "                        Path(\"reference_files\"), f\"{var_base}_reference*\"\n",
     "                    )\n",
-    "                    print(f'validating {output_file}')\n",
+    "                    print(f\"validating {output_file.name}\")\n",
     "                    geotiff_matches_reference_hash_file(output_file, reference_file)\n",
     "\n",
     "                print_success(f\"{shortname} {test_name} test request complete.\")\n",
@@ -326,34 +312,6 @@
     "        f'Bounding box tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
     "    )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b48deed-5907-4c77-80bb-79c5fc75b25f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import jupyter_black\n",
-    "\n",
-    "jupyter_black.load()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e146fc1b-2e11-4a6c-9fd0-82419988f5bc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "afa3e138-553c-4fb1-bed9-4b8576aebdc4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
