DAS-2397: Adds Prodcution configuration
This just adds the production configuration to the test, they can't be enabled
until after the SMAP chains are all deployed to PROD

--- a/test/nsidc-smap/nsidc-smap_Regression.ipynb
+++ b/test/nsidc-smap/nsidc-smap_Regression.ipynb
@@ -148,8 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from non_prod_configuraton import non_production_configuration\n",
-    "from prod_configuration import production_configuration"
+    "from test_configuraton import non_production_configuration, production_configuration"
    ]
   },
   {
