DAS-2397: deepcopy the json object so imports are correct.

--- a/test/nsidc-smap/nsidc-smap_Regression.ipynb
+++ b/test/nsidc-smap/nsidc-smap_Regression.ipynb
@@ -138,7 +138,11 @@
    "id": "b38863ea-7be5-4251-afa8-9669e973fc36",
    "metadata": {},
    "source": [
-    "### Set up test information"
+    "### Set up test information\n",
+    "\n",
+    "The tests are configured in json objects in the `test_configuration.py` module.\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -196,7 +200,20 @@
    "id": "e0788c88-6aee-450a-be35-087ba36a1d80",
    "metadata": {},
    "source": [
-    "The next cell runs through each of the tests forming requests that are submitted to Harmony and comparing the downloaded results against reference data files that have been verified.  This ensures that Harmony continues to return the expected binary files for expected requests.\n"
+    "The next cell runs through each of the tests forming requests that are submitted to Harmony and comparing the downloaded results against reference data files that have been verified.  This ensures that Harmony continues to return the expected binary files for expected requests.\n",
+    "\n",
+    "\n",
+    "The tests include:\n",
+    "\n",
+    "- subset_bounding_box: SPL2SMA, SPL3FTP_E\n",
+    "- subset_by_geojson: SPL2SMA\n",
+    "- subset_by_geojson: SPL2SMA\n",
+    "- subset_by_shapefile: SPL3FTP\n",
+    "- subset_by_variable: SPL2SMP_E, SPL2SMP_E_2\n",
+    "- subset_by_kml: SPL3SMP\n",
+    "- reprojection_to_geographic: SPL4CMDL\n",
+    "            \n",
+    "\n"
    ]
   },
   {
