DAS-2397: Add Assertions and swap TempDirectory creation location.

--- a/test/nsidc-smap/nsidc-smap_Regression.ipynb
+++ b/test/nsidc-smap/nsidc-smap_Regression.ipynb
@@ -224,10 +224,10 @@
    "outputs": [],
    "source": [
     "if configuration is not None:\n",
-    "    with TemporaryDirectory() as tmp_dir:\n",
+    "    for test_name, test_configs in configuration[\"single_output_tests\"].items():\n",
+    "        print(f\"Running Tests: {test_name}\")\n",
     "\n",
-    "        for test_name, test_configs in configuration[\"single_output_tests\"].items():\n",
-    "            print(f\"Running Tests: {test_name}\")\n",
+    "        with TemporaryDirectory() as tmp_dir:\n",
     "\n",
     "            for shortname, test_config in test_configs.items():\n",
     "                print(f\"running request: {shortname}\")\n",
@@ -253,7 +253,9 @@
     "                print(\n",
     "                    f\"assert: {compare_fxn.__name__}({test_output.name}, {reference_file}) \"\n",
     "                )\n",
-    "                assert compare_fxn(test_output, reference_file)\n",
+    "                assert compare_fxn(\n",
+    "                    test_output, reference_file\n",
+    "                ), f'Failed comparison for {shortname}:{test_name}'\n",
     "\n",
     "                print_success(f\"{shortname} {test_name} test request complete.\")\n",
     "            print_success(f\"{test_name} test suite complete.\")\n",
@@ -286,8 +288,8 @@
    "outputs": [],
    "source": [
     "if configuration is not None:\n",
-    "    with TemporaryDirectory() as tmp_dir:\n",
-    "        for test_name, test_configs in configuration[\"multiple_output_tests\"].items():\n",
+    "    for test_name, test_configs in configuration[\"multiple_output_tests\"].items():\n",
+    "        with TemporaryDirectory() as tmp_dir:\n",
     "\n",
     "            for shortname, test_config in test_configs.items():\n",
     "                print(\n",
@@ -318,7 +320,9 @@
     "                        Path(\"reference_files\"), f\"{var_base}_reference*\"\n",
     "                    )\n",
     "                    print(f\"validating {output_file.name}\")\n",
-    "                    geotiff_matches_reference_hash_file(output_file, reference_file)\n",
+    "                    assert geotiff_matches_reference_hash_file(\n",
+    "                        output_file, reference_file\n",
+    "                    ), f'Failed {shortname}:{test_name}'\n",
     "\n",
     "                print_success(f\"{shortname} {test_name} test request complete.\")\n",
     "            print_success(f\"{test_name} test suite complete.\")\n",
