DAS-2397: Updates tests to ignore metadata that changes.
These values change when dmr++ are updated:
 "build_dmrpp_metadata.invocation", "build_dmrpp_metadata.configuration"

This has a hash of the temporary filename in it and maybe should be dropped
from the service, but for now we ignore it:
  "Processing Parameters"

--- a/test/nsidc-smap/nsidc-smap_Regression.ipynb
+++ b/test/nsidc-smap/nsidc-smap_Regression.ipynb
@@ -130,7 +130,11 @@
     "\n",
     "sys.path.append(\"../shared_utils\")\n",
     "from utilities import print_success, submit_and_download\n",
-    "from smap_utils import file_for_variable, comparison_function_by_extension"
+    "from smap_utils import (\n",
+    "    file_for_variable,\n",
+    "    comparison_function_by_extension,\n",
+    "    exclusions_by_extension,\n",
+    ")"
    ]
   },
   {
@@ -247,6 +251,8 @@
     "\n",
     "                # Grab correct comparison function and call it.\n",
     "                compare_fxn = comparison_function_by_extension(ext)\n",
+    "                excluded_metadata = exclusions_by_extension(ext)\n",
+    "\n",
     "                reference_file = (\n",
     "                    Path(\"reference_files\") / f\"{test_output.stem}_reference.json\"\n",
     "                )\n",
@@ -254,12 +260,12 @@
     "                    f\"assert: {compare_fxn.__name__}({test_output.name}, {reference_file}) \"\n",
     "                )\n",
     "                assert compare_fxn(\n",
-    "                    test_output, reference_file\n",
+    "                    test_output, reference_file, **excluded_metadata\n",
     "                ), f'Failed comparison for {shortname}:{test_name}'\n",
     "\n",
     "                print_success(f\"{shortname} {test_name} test request complete.\")\n",
-    "            print_success(f\"{test_name} test suite complete.\")\n",
-    "        print_success(\"Entire SMAP Single Output Regression Test suite complete.\")\n",
+    "        print_success(f\"{test_name} test suite complete.\")\n",
+    "    print_success(\"Entire SMAP Single Output Regression Test suite complete.\")\n",
     "else:\n",
     "    print(\n",
     "        f'Bounding box tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
@@ -325,8 +331,8 @@
     "                    ), f'Failed {shortname}:{test_name}'\n",
     "\n",
     "                print_success(f\"{shortname} {test_name} test request complete.\")\n",
-    "            print_success(f\"{test_name} test suite complete.\")\n",
-    "        print_success(\"muliple_output_test: SMAP Regression Test suite complete.\")\n",
+    "        print_success(f\"{test_name} test suite complete.\")\n",
+    "    print_success(\"muliple_output_test: SMAP Regression Test suite complete.\")\n",
     "else:\n",
     "    print(\n",
     "        f'Bounding box tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
