TRT-680: Add warning to HGA test suite.

--- a/test/hga/HGA_Regression.ipynb
+++ b/test/hga/HGA_Regression.ipynb
@@ -5,6 +5,10 @@
    "id": "3fba6e94",
    "metadata": {},
    "source": [
+    "# Warning:\n",
+    "\n",
+    "This service is largely unused, and will be rescoped in the future. As such, both the service and this test suite are somewhat outdated and brittle. These tests should be tidied up as changes occur to HGA to reflect the new scope and capabilities of the service. Initial changes will likely include the removal of browse image generation and netCDF4 handling.\n",
+    "\n",
     "# Harmony GDAL Adapter (HGA) regression tests\n",
     "\n",
     "The scope of this Jupyter notebook is to run a suite of regression tests against sample collections for the Harmony GDAL Adapter (HGA). These sample collections are primarily from the Alaska Satellite Facility (ASF), including:\n",
@@ -2020,7 +2024,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.20"
+   "version": "3.10.13"
   },
   "name": "HGA_Regression.ipynb"
  },
