DAS-2327: Fixes incorrectly named test SPL2SMP_E_2 - SPL3SMA
Also renames the test_configuration file correctly.

--- a/test/nsidc-smap/nsidc-smap_Regression.ipynb
+++ b/test/nsidc-smap/nsidc-smap_Regression.ipynb
@@ -156,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from test_configuraton import non_production_configuration, production_configuration"
+    "from test_configuration import non_production_configuration, production_configuration"
    ]
   },
   {
