--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "f08acc3f-6bc7-4a2e-a602-cc10ecb27677",
    "metadata": {
     "editable": true,
@@ -82,7 +82,7 @@
    },
    "outputs": [],
    "source": [
-    "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'"
+    "harmony_host_url = 'https://harmony.earthdata.nasa.gov'"
    ]
   },
   {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "c6c54643-4653-4368-9158-1deb8197f9c9",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "4919504b-1f79-4073-ae79-9a23fb1f906f",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "6b57af2f-0eef-4f4b-8699-4c0159c3fece",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "7977dccf-9568-43ea-97c1-f8dc1bb93e6b",
    "metadata": {},
    "outputs": [],
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "1bcb56c0-f6f6-411a-9bfd-3f867bfe235a",
    "metadata": {},
    "outputs": [],
@@ -379,10 +379,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "e745045b-10fc-4e6c-808c-3bdaf2725d03",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "110209015_ATL24_20181228203822_00060208_006_02_001_01_subsetted.h5\n",
+      "Downloaded: 110209015_ATL24_20181228203822_00060208_006_02_001_01_subsetted.h5\n",
+      "Saved output to: /tmp/tmp200p_q27/ATL24_subset_bounding_box.h5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "sh: 1: getfattr: not found\n",
+      "/srv/conda/envs/papermill-nsidc-icesat2/lib/python3.12/site-packages/earthdata_hashdiff/generate.py:208: FutureWarning: The return type of `Dataset.dims` will be changed to return a set of dimension names in future, in order to be more consistent with `DataArray.dims`. To access a mapping from dimension names to lengths, please use `Dataset.sizes`.\n",
+      "  dimension_names = [str(dimension) for dimension in group_dimensions.keys()]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92mSuccess: ATL24 subset_bounding_box test request complete.\u001b[0m\n",
+      "\u001b[92mSuccess: subset_bounding_box test suite complete.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "test_name = 'subset_bounding_box'\n",
     "\n",
