atl-24: adds labels to the harmony requests

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -393,6 +393,7 @@
     "                collection=test_config['collection_concept_id'],\n",
     "                granule_id=[test_config['granule_id']],\n",
     "                spatial=test_config['spatial'],\n",
+    "                labels=[f'IS2-rtest-{shortname}', 'IS2-rtest'],\n",
     "            )\n",
     "            test_output = tmp_dir / Path(f'{shortname}_{test_name}.h5')\n",
     "            test_reference = Path(f'reference_files/{test_output.stem}_reference.json')\n",
@@ -452,6 +453,7 @@
     "                collection=test_config['collection_concept_id'],\n",
     "                granule_id=[test_config['granule_id']],\n",
     "                temporal=test_config['temporal'],\n",
+    "                labels=[f'IS2-rtest-{shortname}', 'IS2-rtest'],\n",
     "            )\n",
     "            test_output = tmp_dir / Path(f'{shortname}_{test_name}.h5')\n",
     "            test_reference = Path(f'reference_files/{test_output.stem}_reference.json')\n",
@@ -511,6 +513,7 @@
     "                collection=test_config['collection_concept_id'],\n",
     "                granule_id=[test_config['granule_id']],\n",
     "                shape=test_config['shape'],\n",
+    "                labels=[f'IS2-rtest-{shortname}', 'IS2-rtest'],\n",
     "            )\n",
     "            test_output = tmp_dir / Path(f'{shortname}_{test_name}.h5')\n",
     "            test_reference = Path(f'reference_files/{test_output.stem}_reference.json')\n",
